--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
 </head>
 
 <body>
-  <app-root></app-root>
+
+  <app-root>
+  
+  </app-root>
   <script src="https://kit.fontawesome.com/29859db71f.js" crossorigin="anonymous"></script>
 
 </body>
