se me doficaron barias cosas del los stilos en el perfil y se quito el fondo que era una img que ocupaba muhco info asi que la elimine

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
 </head>
 
 <body>
-  <div class="background-image">
-    <img src="./assets/img/fondo.jpg" alt="Background Image" loading="lazy">
+
+  <div class="overlay">
+    
   </div>
-  <div class="overlay"></div>
   <app-root></app-root>
   <script src="https://kit.fontawesome.com/29859db71f.js" crossorigin="anonymous"></script>
 </body>
